@@ -1,3 +1,13 @@
+2021-05-28  Sihui Liu  <sihui_liu@apple.com>
+
+        Regression(r278179): m_serverLock is still held after WebIDBServer is destroyed
+        https://bugs.webkit.org/show_bug.cgi?id=226389
+
+        Reviewed by Chris Dumez.
+
+        * NetworkProcess/IndexedDB/WebIDBServer.cpp:
+        (WebKit::WebIDBServer::close):
+
 2021-05-28  Matt Gilligan  <matthew_gilligan@apple.com>
 
         Prevent resetting scroll position in unnecessary cases during page load
